apply plugin: 'com.android.application'
apply plugin: 'realm-android'

android {
    flavorDimensions "executionEnv"

    compileSdkVersion 26
    buildToolsVersion '26.0.2'
    defaultConfig {
        applicationId "com.appsubaruod.sharabletobuylist"
        minSdkVersion 24
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    dataBinding {
        enabled = true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
        debug {
            testCoverageEnabled true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    productFlavors {
        regular {
            dimension "executionEnv"
        }
        localunittest {
            dimension "executionEnv"
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
    testImplementation 'junit:junit:4.12'
    implementation 'com.android.support:support-v4:26.0.0-beta2'
    implementation 'com.android.support:design:26.0.0-beta2'
    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
    testImplementation 'org.robolectric:robolectric:3.0'

    androidTestCompile 'com.android.support:support-annotations:25.4.0'
    androidTestCompile 'com.android.support.test:runner:0.5'
    androidTestCompile 'com.android.support.test:rules:0.5'
    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
    androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'

    compile 'com.google.dagger:dagger:2.11'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
    implementation 'com.android.support:cardview-v7:26.0.0-beta2'
    implementation 'org.greenrobot:eventbus:3.0.0'

    implementation 'com.google.firebase:firebase-core:11.2.2'
    implementation 'com.google.firebase:firebase-database:11.2.2'

    implementation 'com.github.clans:fab:1.6.4'
}

apply plugin: 'com.google.gms.google-services'
